--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,21 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+resource/
+data/
+
+# report
+
+.DS_Store
+
+report/*.aux
+report/*.bbl
+report/*.blg
+report/*.fdb_latexmk
+report/*.fls
+report/*.gz
+report/*.pdf
+
+*.pdf
+*.out
